--- a/css/styles.css
+++ b/css/styles.css
@@ -122,31 +122,31 @@ window{opacity:1; background:black; }
 	 to{transform:rotate(360deg)}
 		}
 	
-	 #pichold>img{width:90%; height:75%;}
+	 #pichold>img{width:90%; height:70%; top:8%;}
      #pichold>h3{bottom:10.5%; left:15%; color:black; font-weight:normal;}
      #pichold>h4{bottom:8%; left:15%; color:teal; font-weight:lighter;}
 	 #pichold>#download{position:absolute; bottom:5%; right:10%;}
 	 #pichold>#cart{position:absolute; bottom:5%; right:5%;}
 	 
-	 #pichold1>img{width:90%; height:75%;}
+	 #pichold1>img{width:90%;height:70%; top:8%;}
      #pichold1>h3{bottom:10.5%; left:15%; color:black; font-weight:normal;}
      #pichold1>h4{bottom:8%; left:15%; color:teal; font-weight:lighter;}
 	 #pichold1>#download{position:absolute; bottom:5%; right:10%;}
 	 #pichold1>#cart1{position:absolute; bottom:5%; right:5%;}
 
-	 #pichold2>img{width:90%; height:75%;}
+	 #pichold2>img{width:90%; height:70%; top:8%;}
      #pichold2>h3{bottom:10.5%; left:15%; color:black; font-weight:normal;}
      #pichold2>h4{bottom:8%; left:15%; color:teal; font-weight:lighter;}
 	 #pichold2>#download{position:absolute; bottom:5%; right:10%;}
 	 #pichold2>#cart2{position:absolute; bottom:5%; right:5%;}
 	 
-     #pichold3>img{width:90%; height:75%;}
+     #pichold3>img{width:90%; height:70%; top:8%;}
      #pichold3>h3{bottom:10.5%; left:15%; color:black; font-weight:normal;}
      #pichold3>h4{bottom:8%; left:15%; color:teal; font-weight:lighter;}
 	 #pichold3>#download{position:absolute; bottom:5%; right:10%;}
 	 #pichold3>#cart3{position:absolute; bottom:5%; right:5%;} 
 	 
-	 #pichold4>img{width:90%; height:75%;}
+	 #pichold4>img{width:90%; height:70%; top:8%;}
      #pichold4>h3{bottom:10.5%; left:15%; color:black; font-weight:normal;}
      #pichold4>h4{bottom:8%; left:15%; color:teal; font-weight:lighter;}
 	 #pichold4>#download{position:absolute; bottom:5%; right:10%;}
@@ -168,6 +168,7 @@ window{opacity:1; background:black; }
      #lastbar>#social3{top:67%; height:22px; width:22px; left:35%; border-radius:20%; }
      #lastbar>#social3>a>img{top:5%; left:3%; height:20px; width:20px;}
      
+	 #modal-form{position:fixed; height:100%; width:100%;}
 	 #modal-form>h2{font-size:12px; font-weight:bold; position:absolute; left:10%; top:-5%; letter-spacing:5px;}
 	 #modal-form>h3{font-size:12px;  position:absolute; right:10%; top:15%;} 
 	 #modal-form>h4{font-size:10px;  position:absolute; right:10.5%; top:24%;}
