--- a/css/styles.css
+++ b/css/styles.css
@@ -179,13 +179,13 @@ window{opacity:1; background:black; }
 	 #email-input{position:absolute; width:42%; left:50%; top:52%; color:teal }
      #location-input{position:absolute; width:42%; left:50%; top:65%; color:teal; text-transform:capitalize; }
 	 
-	 #video-cover{position:absolute; top:529%; right:3%; background:teal; opacity:.4; width:21px; height:21px; border-radius:35%;}
+	 #video-cover{position:absolute; top:529%; right:5px; background:teal; opacity:.4; width:21px; height:21px; border-radius:35%;}
 	 #video-box{position:absolute; top:-3%; left:15%;}
-	 #mail-cover{position:absolute; top:529%; right:9%; background:darkred; opacity:.4; width:21px; height:21px; border-radius:35%;}
+	 #mail-cover{position:absolute; top:529%; right:35px; background:darkred; opacity:.4; width:21px; height:21px; border-radius:35%;}
 	 #mail{position:absolute; top:-3%; right:10%;}
-	 #facebook-cover{position:absolute; top:529%; right:15%; background:darkblue; opacity:.4; width:21px; height:21px; border-radius:35%;}
+	 #facebook-cover{position:absolute; top:529%; right:65px; background:darkblue; opacity:.4; width:21px; height:21px; border-radius:35%;}
 	 #facebook-social{position:absolute; top:-3%; right:10%;}
-	 #instagram-cover{position:absolute; top:529%; right:21%; background:purple; opacity:.4; width:21px; height:21px; border-radius:35%;}
+	 #instagram-cover{position:absolute; top:529%; right:95px; background:purple; opacity:.4; width:21px; height:21px; border-radius:35%;}
 	 #instagram-social{position:absolute; top:-3%; right:10%;}
 	 
 
