--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,6 @@
-window{opacity:1; background:black; }
-#mybody{display:block;}
 
-#preload-page{position:fixed; width:100%; height:100%; background:white; display:none;}
+
+#preload-page{position:fixed; width:100%; height:100%; background:white; display:none; z-index:9999;}
 #preload-img{position:absolute; width:100%; height:100%;}
 #preloader{position:absolute; top:90%; right:5%; width:48px; height:48px; border-radius:50px; border-top:10px solid red; border-left:10px solid teal; border-right:10px solid black; border-bottom:10px solid grey; animation:rotator  1s infinite; }
 @keyframes rotator{
@@ -9,41 +8,41 @@ window{opacity:1; background:black; }
 	to{transform:rotate(360deg)}
 }
 
+
 #pichold{position:absolute; top:5%; left:2%; height:95%; width:96%; background:rgba(0,0,0,.01); box-shadow:0px .8px 18px 2px rgba(0,0,0,.1); border-radius:0px 30px 0px 0px; display:block;}
 #pichold>img{position:absolute; top:5%; left:5%; height:85%; width:45%;}
-#pichold>h3{position:absolute; bottom:88.5%; left:50%; font-size:15px; font-weight:bold; letter-spacing:5px; color:teal;}
-#pichold>h4{position:absolute; bottom:85%; left:50%; font-size:10px; font-weight:normal; letter-spacing:2px; top-margin:50px;}
+#pichold>h3{position:absolute; bottom:82.5%; right:5%; font-size:15px; font-weight:bold; letter-spacing:5px; color:teal;}
+#pichold>h4{position:absolute; bottom:78%; right:5%; font-size:10px; font-weight:normal; letter-spacing:2px; top-margin:50px;}
 #pichold>#download{position:absolute; bottom:10%; right:8%;}
 #pichold>#cart{position:absolute; bottom:10%; right:5%;}
 
 #pichold1{position:absolute; top:105%; left:2%; height:95%; width:96%; background:rgba(0,0,0,.01); box-shadow:0px .8px 18px 2px rgba(0,0,0,.1); border-radius:0px 30px 0px 0px;}
 #pichold1>img{position:absolute; top:5%; left:5%; height:85%; width:45%;}
-#pichold1>h3{position:absolute; bottom:88.5%; left:50%; font-size:15px; font-weight:bold; letter-spacing:5px; color:teal;}
-#pichold1>h4{position:absolute; bottom:85%; left:50%; font-size:10px; font-weight:normal; letter-spacing:2px; top-margin:50px;}
+#pichold1>h3{position:absolute; bottom:82.5%; right:5%; font-size:15px; font-weight:bold; letter-spacing:5px; color:teal;}
+#pichold1>h4{position:absolute; bottom:78%; right:5%; font-size:10px; font-weight:normal; letter-spacing:2px; top-margin:50px;}
 #pichold1>#download{position:absolute; bottom:10%; right:8%;}
 #pichold1>#cart1{position:absolute; bottom:10%; right:5%;}
 
 #pichold2{position:absolute; top:205%; left:2%; height:95%; width:96%; background:rgba(0,0,0,.01); box-shadow:0px .8px 18px 2px rgba(0,0,0,.1); border-radius:0px 30px 0px 0px;}
 #pichold2>img{position:absolute; top:5%; left:5%; height:85%; width:45%;}
-#pichold2>h3{position:absolute; bottom:88.5%; left:50%; font-size:15px; font-weight:bold; letter-spacing:5px; color:teal;}
-#pichold2>h4{position:absolute; bottom:85%; left:50%; font-size:10px; font-weight:normal; letter-spacing:2px; top-margin:50px;}
+#pichold2>h3{position:absolute; bottom:82.5%; right:5%; font-size:15px; font-weight:bold; letter-spacing:5px; color:teal;}
+#pichold2>h4{position:absolute; bottom:78%; right:5%; font-size:10px; font-weight:normal; letter-spacing:2px; top-margin:50px;}
 #pichold2>#download{position:absolute; bottom:10%; right:8%;}
 #pichold2>#cart2{position:absolute; bottom:10%; right:5%;}
 
 #pichold3{position:absolute; top:305%; left:2%; height:95%; width:96%; background:rgba(0,0,0,.01); box-shadow:0px .8px 18px 2px rgba(0,0,0,.1); border-radius:0px 30px 0px 0px;}
 #pichold3>img{position:absolute; top:5%; left:5%; height:85%; width:45%;}
-#pichold3>h3{position:absolute; bottom:88.5%; left:50%; font-size:15px; font-weight:bold; letter-spacing:5px; color:teal;}
-#pichold3>h4{position:absolute; bottom:85%; left:50%; font-size:10px; font-weight:normal; letter-spacing:2px; top-margin:50px;}
+#pichold3>h3{position:absolute; bottom:82.5%; right:5%; font-size:15px; font-weight:bold; letter-spacing:5px; color:teal;}
+#pichold3>h4{position:absolute; bottom:78%; right:5%; font-size:10px; font-weight:normal; letter-spacing:2px; top-margin:50px;}
 #pichold3>#download{position:absolute; bottom:10%; right:8%;}
 #pichold3>#cart3{position:absolute; bottom:10%; right:5%;}
 
 #pichold4{position:absolute; top:405%; left:2%; height:95%; width:96%; background:rgba(0,0,0,.01); box-shadow:0px .8px 18px 2px rgba(0,0,0,.1); border-radius:0px 30px 0px 0px;}
 #pichold4>img{position:absolute; top:5%; left:5%; height:85%; width:45%;}
-#pichold4>h3{position:absolute; bottom:88.5%; left:50%; font-size:15px; font-weight:bold; letter-spacing:5px; color:teal;}
-#pichold4>h4{position:absolute; bottom:85%; left:50%; font-size:10px; font-weight:normal; letter-spacing:2px; top-margin:50px;}
+#pichold4>h3{position:absolute; bottom:82.5%; right:5%; font-size:15px; font-weight:bold; letter-spacing:5px; color:teal;}
+#pichold4>h4{position:absolute; bottom:78%; right:5%; font-size:10px; font-weight:normal; letter-spacing:2px; top-margin:50px;}
 #pichold4>#download{position:absolute; bottom:10%; right:8%;}
 #pichold4>#cart4{position:absolute; bottom:10%; right:5%;}
-
 
 #lastbar{position:absolute; top:655%; background:black; opacity:1; width:100%; height:15%; left:0%; box-shadow:inset 1px 2px 5px rgba(0,0,0,0); border-radius: 0px 0px 0px 0px;}
 #lastbar>#h61{position:absolute; top:15%; left:68%; color:grey;  font-size:.8em; font-weight:lighter; letter-spacing:6px; text-align:center;}
@@ -114,14 +113,20 @@ window{opacity:1; background:black; }
 
 @media only screen and (max-width:768px){
 
-	 #preload-page{width:100%; height:100%; background:white; display:none;}
+	 #preload-page{width:100%; height:100%; background:white; display:block;}
 	 #preload-img{position:absolute; width:100%; height:100%;}
-	 #preloader{position:absolute; top:90%; right:5%; width:48px; height:48px; border-radius:50px; border-top:10px solid red; border-left:10px solid teal; border-right:10px solid black; border-bottom:10px solid grey; animation:rotator  1s infinite; }
+	 #preloader{position:absolute; top:90%; right:5%; width:28px; height:28px; border-radius:50px; border-top:2px solid red; border-left:2px solid teal; border-right:2px solid black; border-bottom:2px solid grey; display:none; animation:rotator  1s infinite; }
 	 @keyframes rotator{
 	 from{transform:rotate(0deg)}
 	 to{transform:rotate(360deg)}
 		}
-	
+	#progress1{position:absolute; top:75%; width:30%; left:35%; animation:change-progress linear 3s infinite 2s alternate;}
+	@keyframes change-progress{
+		25%{background:brown;}
+		50%{background:purple;}
+		75%{background:pink;}
+		100%{background:indigo;}
+	}
 	 #pichold>img{width:96%; left:2%; height:70%; top:8%;}
      #pichold>h3{bottom:10.5%; left:15%; color:black; font-weight:normal;}
      #pichold>h4{bottom:8%; left:15%; color:teal; font-weight:lighter;}
@@ -152,9 +157,11 @@ window{opacity:1; background:black; }
 	 #pichold4>#download{position:absolute; bottom:5%; right:10%;}
 	 #pichold4>#cart4{position:absolute; bottom:5%; right:5%;}
 	 
-	 #lastbar{top:536%; height:25%; }
-     #lastbar>#h61{top:15%; left:28%; font-size:10px; letter-spacing:2px; font-weight:bold; color:white;}
-     #lastbar>#h62{top:20%; left:2%; font-size:8px; letter-spacing:2px; font-weight:lighter; color:white;}
+	 #lastbar{top:536%; height:65%; }
+     #lastbar>#h61{top:10%;  left:40%; font-size:10px; letter-spacing:2px; font-weight:normal; color:grey;}
+     #lastbar>#h62{top:2%; left:35%; font-size:20px; letter-spacing:5px; font-weight:bold; font-family:Georgia; color:white;}
+     #lastbar>#h63{position:absolute; top:35%; left:18%; font-size:10px; letter-spacing:2px; font-weight:normal; color:grey; text-align:center; font-family:Cursive;}
+     #lastbar-subscribe{position:absolute; top:60%; width:50%; left:21%; height:8%; background:black; border:.5px solid white; border-radius:6px; text-align:center;}
      
 	 #modal-form{position:absolute; height:100%; width:100%;}
 	 #modal-form>h2{font-size:16px; font-weight:bold; position:absolute; top:7%; letter-spacing:5px; text-align:center;}
@@ -175,28 +182,27 @@ window{opacity:1; background:black; }
 	 #facebook-social{position:absolute; top:-3%; right:10%;}
 	 #instagram-cover{position:absolute; top:529%; right:95px; background:purple; opacity:.4; width:21px; height:21px; border-radius:35%;}
 	 #instagram-social{position:absolute; top:-3%; right:10%;}
-	 #top-scroll{position:absolute; top:529%; left:15px; background:black; opacity:.4; width:50px; height:21px; border-radius:5%;}
+	 #top-scroll{position:absolute; top:529%; right:125px; background:black; opacity:.7; width:21px; height:21px; border-radius:35%;}
 	 #top{position:absolute; top:-3%; right:10%;}
+	 
 	 
 
 	
 	 #offslide{background:white; position:fixed; width:200px; height:100%; opacity:1; display:none;}
-	 #offslide>h1{position:absolute; font-size:18px; letter-spacing:2px; top:4%; left:15%; font-family:gothic; font-weight:normal;}
+	 #offslide>h1{position:absolute; font-size:19px; letter-spacing:2px; top:-3%; left:15%; font-family:gothic; font-weight:normal;}
 	 #offslide>button{position:absolute; top:96%; right:3%;}
-	 #hr1{position:absolute; width:100%; height:6.5%; background:rgba(0,0,0,.08); top:12%; opacity:1; border-top:1px solid rgba(0,0,0,.05);  border-bottom:1px solid rgba(0,0,0,.05);}
-	 #year-input{position:absolute; width:70%; left:1%; height:70%; top:16.5%; text-align:center; font-weight:bold; font-size:12px; text-decoration:none; background:rgba(0,80,90,1); color:white}
-	 #year-submit{position:absolute; right:10%; top:18%;}
+	 #hr1{position:absolute; width:100%; height:19%; background:rgba(0,0,0,.08); top:11%; opacity:1; border-top:1px solid rgba(0,0,0,.05);  border-bottom:1px solid rgba(0,0,0,.05);}
+	.switch{position:absolute; top:32%; right:0%;}
 	 
-	 #toplink{}
-	 #home{color:black; text-decoration:none; font-weight:bold; position:absolute; left:8%;  top:35%; letter-spacing:3px; font-size:13px; opacity:.3; text-align:center;}
-	 #bio{color:black; text-decoration:none; font-weight:bold; position:absolute; left:8%; top:42%; letter-spacing:3px; font-size:13px; opacity:.3;}
-	 #works{color:black; text-decoration:none; font-weight:bold; position:absolute; left:8%; top:49%; letter-spacing:3px; font-size:13px; opacity:.3;}
-	 #contact{color:black; font-weight:bold;text-decoration:none; position:absolute; left:8%; top:56%; letter-spacing:3px; font-size:13px; opacity:.3}
-	 #exhibition{color:black; font-weight:bold;text-decoration:none;position:absolute; left:8%; top:63%; letter-spacing:3px; font-size:13px; opacity:.3}
+	  #toplink{}
+	 #home{color:black; text-decoration:none; font-weight:bold; position:absolute; left:8%;  top:45%; letter-spacing:3px; font-size:13px; opacity:.3; text-align:center;}
+	 #bio{color:black; text-decoration:none; font-weight:bold; position:absolute; left:8%; top:52%; letter-spacing:3px; font-size:13px; opacity:.3;}
+	 #works{color:black; text-decoration:none; font-weight:bold; position:absolute; left:8%; top:59%; letter-spacing:3px; font-size:13px; opacity:.3;}
+	 #contact{color:black; font-weight:bold;text-decoration:none; position:absolute; left:8%; top:66%; letter-spacing:3px; font-size:13px; opacity:.3}
+	 #exhibition{color:black; font-weight:bold;text-decoration:none;position:absolute; left:8%; top:73%; letter-spacing:3px; font-size:13px; opacity:.3}
 	 #home:hover{opacity:1; letter-spacing:10px; font-size:14px;}
 	 #bio:hover{opacity:1; letter-spacing:10px; font-size:14px;}
 	 #works:hover{opacity:1; letter-spacing:10px; font-size:14px;}
 	 #contact:hover{opacity:1; letter-spacing:10px; font-size:14px;}
 	 #exhibition:hover{opacity:1; letter-spacing:10px; font-size:14px;}
-	
 }
