--- a/css/styles.css
+++ b/css/styles.css
@@ -158,9 +158,9 @@
 	 #pichold4>#cart4{position:absolute; bottom:5%; right:5%;}
 	 
 	 #lastbar{top:536%; height:65%; }
-     #lastbar>#h61{top:10%;  left:%; font-size:10px; letter-spacing:2px; font-weight:normal; color:grey; text-align:center;}
-     #lastbar>#h62{top:2%; left:%; font-size:20px; letter-spacing:5px; font-weight:bold; font-family:Georgia; color:white; text-align:center;}
-     #lastbar>#h63{top:35%; left:%; font-size:15px; letter-spacing:2px; font-weight:normal; color:grey; text-align:center; font-family:Cursive;}
+     #lastbar>#h61{top:10%;  left:50%; font-size:10px; letter-spacing:2px; font-weight:normal; color:grey; text-align:center;}
+     #lastbar>#h62{top:2%; left:50%; font-size:20px; letter-spacing:5px; font-weight:bold; font-family:Georgia; color:white; text-align:center;}
+     #lastbar>#h63{top:35%; left:%; font-size:12px; letter-spacing:2px; font-weight:normal; color:grey; text-align:center; font-family:Cursive;}
      #lastbar-subscribe{top:60%; width:50%; left:%; height:8%; background:black; border:.5px solid white; border-radius:6px; text-align:center;}
      
 	 #modal-form{position:absolute; height:100%; width:100%;}
