--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,6 @@
 
 
-#preload-page{position:fixed; width:100%; height:100%; background:white; display:none; z-index:9999;}
+#preload-page{position:fixed; width:100%; height:100%; background:white; display:none; z-index:9999; overflow:hidden;}
 #preload-img{position:absolute; width:100%; height:100%;}
 #preloader{position:absolute; top:90%; right:5%; width:48px; height:48px; border-radius:50px; border-top:10px solid red; border-left:10px solid teal; border-right:10px solid black; border-bottom:10px solid grey; animation:rotator  1s infinite; }
 @keyframes rotator{
@@ -112,8 +112,8 @@
 }
 
 @media only screen and (max-width:768px){
-
-	 #preload-page{width:100%; height:100%; background:white; display:none;}
+	 main{display:none;}
+	 #preload-page{width:100%; height:100%; background:white; display:block;}
 	 #preload-img{position:absolute; width:100%; height:100%;}
 	 #preloader{position:absolute; top:90%; right:5%; width:28px; height:28px; border-radius:50px; border-top:2px solid red; border-left:2px solid teal; border-right:2px solid black; border-bottom:2px solid grey; display:none; animation:rotator  1s infinite; }
 	 @keyframes rotator{
