--- a/css/styles.css
+++ b/css/styles.css
@@ -127,49 +127,46 @@
 		75%{background:pink;}
 		100%{background:indigo;}
 	}
-	 #pichold>img{width:96%; left:2%; height:70%; top:8%;}
+	 #pichold>img{width:90%; left:5%; height:70%; top:8%;}
      #pichold>h3{bottom:10.5%; left:15%; color:black; font-weight:normal;}
      #pichold>h4{bottom:8%; left:15%; color:teal; font-weight:lighter;}
 	 #pichold>#download{position:absolute; bottom:5%; right:10%;}
 	 #pichold>#cart{position:absolute; bottom:5%; right:5%;}
 	 
-	 #pichold1>img{width:96%; left:2%; height:70%; top:8%;}
+	 #pichold1>img{width:90%; left:5%; height:70%; top:8%;}
      #pichold1>h3{bottom:10.5%; left:15%; color:black; font-weight:normal;}
      #pichold1>h4{bottom:8%; left:15%; color:teal; font-weight:lighter;}
 	 #pichold1>#download{position:absolute; bottom:5%; right:10%;}
 	 #pichold1>#cart1{position:absolute; bottom:5%; right:5%;}
 
-	 #pichold2>img{width:96%; left:2%; height:70%; top:8%;}
+	 #pichold2>img{width:90%; left:5%; height:70%; top:8%;}
      #pichold2>h3{bottom:10.5%; left:15%; color:black; font-weight:normal;}
      #pichold2>h4{bottom:8%; left:15%; color:teal; font-weight:lighter;}
 	 #pichold2>#download{position:absolute; bottom:5%; right:10%;}
 	 #pichold2>#cart2{position:absolute; bottom:5%; right:5%;}
 	 
-     #pichold3>img{width:96%; left:2%; height:70%; top:8%;}
+     #pichold3>img{width:90%; left:5%; height:70%; top:8%;}
      #pichold3>h3{bottom:10.5%; left:15%; color:black; font-weight:normal;}
      #pichold3>h4{bottom:8%; left:15%; color:teal; font-weight:lighter;}
 	 #pichold3>#download{position:absolute; bottom:5%; right:10%;}
 	 #pichold3>#cart3{position:absolute; bottom:5%; right:5%;} 
 	 
-	 #pichold4>img{width:96%; left:2%; height:70%; top:8%;}
+	 #pichold4>img{width:90%; left:5%; height:70%; top:8%;}
      #pichold4>h3{bottom:10.5%; left:15%; color:black; font-weight:normal;}
      #pichold4>h4{bottom:8%; left:15%; color:teal; font-weight:lighter;}
 	 #pichold4>#download{position:absolute; bottom:5%; right:10%;}
 	 #pichold4>#cart4{position:absolute; bottom:5%; right:5%;}
 	 
-	 #lastbar{top:536%; height:65%; }
-     #lastbar>#h61{top:10%;  left:50%; font-size:10px; letter-spacing:2px; font-weight:normal; color:grey; text-align:center;}
-     #lastbar>#h62{top:2%; left:50%; font-size:20px; letter-spacing:5px; font-weight:bold; font-family:Georgia; color:white; text-align:center;}
-     #lastbar>#h63{top:35%; left:%; font-size:12px; letter-spacing:2px; font-weight:normal; color:grey; text-align:center; font-family:Cursive;}
-     #lastbar-subscribe{top:60%; width:50%; left:%; height:8%; background:black; border:.5px solid white; border-radius:6px; text-align:center;}
-     
+	 #h61{top:550%; color:teal; position:absolute; font-size:12px; left:170px; text-align:center;}
+	 #h62{top:550%; color:black; position:absolute; font-size:12px; right:170px; text-align:center;}
+
 	 #modal-form{position:absolute; height:100%; width:100%;}
 	 #modal-form>h2{font-size:16px; font-weight:bold; position:absolute; top:7%; letter-spacing:5px; text-align:center;}
 	 #modal-form>h3{font-size:12px;  position:absolute; right:10%; top:20%;} 
 	 #modal-form>h4{font-size:10px;  position:absolute; right:10.5%; top:26%;}
 	 #modal-form>button{position:absolute; top:90%; right:8%; border-radius:8px; background:teal; color:white;}
 	 #modal-img{position:absolute; bottom:25%; filter:grayscale(10); opacity:.8;}
-	 #modal-dialog{height:90%; width:90%; border-radius:5% 0% 5% 5%; }
+	 #modal-dialog{height:90%; width:90%; border-radius:25px 0px 25px 25px; }
 	 #type-input{position:absolute; width:42%; left:50%; top:40%; color:teal }
 	 #email-input{position:absolute; width:42%; left:50%; top:52%; color:teal }
      #location-input{position:absolute; width:42%; left:50%; top:65%; color:teal; text-transform:capitalize; }
