--- a/css/styles.css
+++ b/css/styles.css
@@ -165,7 +165,7 @@
 	 #modal-form>h3{font-size:12px;  position:absolute; right:10%; top:20%;} 
 	 #modal-form>h4{font-size:10px;  position:absolute; right:10.5%; top:26%;}
 	 #modal-form>button{position:absolute; top:90%; right:8%; border-radius:8px; background:teal; color:white;}
-	 #modal-img{position:absolute; bottom:25%; filter:grayscale(10); opacity:.8;}
+	 #modal-img{position:absolute; bottom:25%; left:5%; filter:grayscale(10); opacity:.8;}
 	 #modal-dialog{height:90%; width:90%; border-radius:25px 0px 25px 25px; }
 	 #type-input{position:absolute; width:42%; left:50%; top:40%; color:teal }
 	 #email-input{position:absolute; width:42%; left:50%; top:52%; color:teal }
@@ -195,6 +195,11 @@
 	 #home{color:black; text-decoration:none; font-weight:bold; position:absolute; left:8%;  top:45%; letter-spacing:3px; font-size:13px; opacity:.3; text-align:center;}
 	 #bio{color:black; text-decoration:none; font-weight:bold; position:absolute; left:8%; top:52%; letter-spacing:3px; font-size:13px; opacity:.3;}
 	 #works{color:black; text-decoration:none; font-weight:bold; position:absolute; left:8%; top:59%; letter-spacing:3px; font-size:13px; opacity:.3;}
+	 #down{position:absolute; height:0%; width:100%; top:64%; background:white;}
+	 #mob-year{position:absolute; top:10.5%; left:8%; display:none; color:black; text-decoration:none; font-weight:bold; letter-spacing:3px; font-size:13px; opacity:.3;}
+	 #mob-series{position:absolute; top:65%; left:8%; display:none; color:black; text-decoration:none; font-weight:bold; letter-spacing:3px; font-size:13px; opacity:.3;}
+	 #works-span{position:absolute; top:60.5%; right:45%; display:block;}
+	 #works-span2{position:absolute; top:60.5%; right:45%; display:none;}
 	 #contact{color:black; font-weight:bold;text-decoration:none; position:absolute; left:8%; top:66%; letter-spacing:3px; font-size:13px; opacity:.3}
 	 #exhibition{color:black; font-weight:bold;text-decoration:none;position:absolute; left:8%; top:73%; letter-spacing:3px; font-size:13px; opacity:.3}
 	 #home:hover{opacity:1; letter-spacing:10px; font-size:14px;}
