--- a/css/styles.css
+++ b/css/styles.css
@@ -157,8 +157,8 @@
 	 #pichold4>#download{position:absolute; bottom:5%; right:10%;}
 	 #pichold4>#cart4{position:absolute; bottom:5%; right:5%;}
 	 
-	 #h61{top:550%; color:teal; position:absolute; font-size:12px; left:26%; text-align:center;}
-	 #h62{top:550%; color:black; position:absolute; font-size:12px; right:26%; text-align:center;}
+	 #h61{top:550%; color:teal; position:absolute; font-size:12px; left:27%; text-align:center;}
+	 #h62{top:550%; color:black; position:absolute; font-size:12px; right:27%; text-align:center;}
 
 	 #modal-form{position:absolute; height:100%; width:100%;}
 	 #modal-form>h2{font-size:16px; font-weight:bold; position:absolute; top:7%; letter-spacing:5px; text-align:center;}
@@ -188,7 +188,7 @@
 	 #offslide{background:white; position:fixed; width:200px; height:100%; left:-100%; opacity:1; display:block;}
 	 #offslide-h1{position:absolute; font-size:19px; letter-spacing:2px; top:-3%; left:-70%; font-family:gothic; font-weight:normal;}
 	 #offslide>button{position:absolute; top:96%; right:3%;}
-	 #hr1{position:absolute; width:100%; height:19%; background:rgba(0,0,0,.08); top:11%; opacity:1; border-top:1px solid rgba(0,0,0,.05);  border-bottom:1px solid rgba(0,0,0,.05);}
+	 #hr1{position:absolute; width:100%; height:25%; background:transparent; top:11%; opacity:1; border-top:1px solid rgba(0,0,0,.05);  border-bottom:1px solid rgba(0,0,0,.05);}
 	.switch{position:absolute; top:32%; right:0%; color:black;}
 	
 	 #toplink{}
@@ -198,8 +198,8 @@
 	 #down{position:absolute; height:0%; width:100%; top:64%; background:white;}
 	 #mob-year{position:absolute; top:10.5%; left:8%; display:none; color:black; text-decoration:none; font-weight:bold; letter-spacing:3px; font-size:13px; opacity:.3;}
 	 #mob-series{position:absolute; top:65%; left:8%; display:none; color:black; text-decoration:none; font-weight:bold; letter-spacing:3px; font-size:13px; opacity:.3;}
-	 #works-span{position:absolute; top:60.5%; right:45%; display:block;}
-	 #works-span2{position:absolute; top:60.5%; right:45%; display:none;}
+	 #works-span{position:absolute; top:60.5%; right:50%; display:block;}
+	 #works-span2{position:absolute; top:60.5%; right:50%; display:none;}
 	 #contact{color:black; font-weight:bold;text-decoration:none; position:absolute; left:8%; top:66%; letter-spacing:3px; font-size:13px; opacity:.3}
 	 #exhibition{color:black; font-weight:bold;text-decoration:none;position:absolute; left:8%; top:73%; letter-spacing:3px; font-size:13px; opacity:.3}
 	 #home:hover{opacity:1; letter-spacing:10px; font-size:14px;}
