--- a/css/styles.css
+++ b/css/styles.css
@@ -157,8 +157,8 @@
 	 #pichold4>#download{position:absolute; bottom:5%; right:10%;}
 	 #pichold4>#cart4{position:absolute; bottom:5%; right:5%;}
 	 
-	 #h61{top:550%; color:teal; position:absolute; font-size:12px; left:28%; text-align:center;}
-	 #h62{top:550%; color:black; position:absolute; font-size:12px; right:28%; text-align:center;}
+	 #h61{top:550%; color:teal; position:absolute; font-size:12px; left:28.5%; text-align:center;}
+	 #h62{top:550%; color:black; position:absolute; font-size:12px; right:28.5%; text-align:center;}
 
 	 #modal-form{position:absolute; height:100%; width:100%;}
 	 #modal-form>h2{font-size:16px; font-weight:bold; position:absolute; top:7%; letter-spacing:5px; text-align:center;}
@@ -189,8 +189,8 @@
 	 #offslide-h1{position:absolute; font-size:19px; letter-spacing:2px; top:-3%; left:-70%; font-family:gothic; font-weight:normal;}
 	 #offslide>button{position:absolute; top:96%; right:3%;}
 	 #hr1{position:absolute; width:100%; height:25%; background:transparent; top:11%; opacity:1; border-top:1px solid rgba(0,0,0,.05);  border-bottom:1px solid rgba(0,0,0,.05);}
-	.switch{position:absolute; top:32%; right:0%; color:black;}
-	
+	 #darkmode{position:absolute; top:38%; left:75%; color:black; width:0%; height:0%; }
+	 
 	 #toplink{}
 	 #home{color:black; text-decoration:none; font-weight:bold; position:absolute; left:8%;  top:45%; letter-spacing:3px; font-size:13px; opacity:.3; text-align:center;}
 	 #bio{color:black; text-decoration:none; font-weight:bold; position:absolute; left:8%; top:52%; letter-spacing:3px; font-size:13px; opacity:.3;}
